--- a/Algorithm_V1/recommendation_output/cluster_map/2025-06-28/index.html
+++ b/Algorithm_V1/recommendation_output/cluster_map/2025-06-28/index.html
@@ -24,9 +24,9 @@
             onerror="this.onerror=null;this.src='https://placehold.co/400x200/CCCCCC/333333?text=Image+Not+Found';"
         >
 
-        <h1 class="text-3xl font-bold text-blue-700 mb-6">Welcome to Smart Pull Selected Trip Routes</h1>
+        <h1 class="text-3xl font-bold text-blue-700 mb-6">Welcome to Smart Pull </h1>
         <p class="text-lg text-gray-700 leading-relaxed mb-8">
-            Kindly select a valid <strong class="text-blue-600">Stock Point</strong> to see the selected trip routes.
+            Kindly select a valid <strong class="text-blue-600">Stock Point</strong> to see the all customer cluster.
         </p>
 
         <!-- 
